--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
     "@auth0/angular-jwt": "^5.2.0",
+    "@panzoom/panzoom": "^4.6.0",
     "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
