--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
     "@auth0/angular-jwt": "^5.2.0",
+    "@ckeditor/ckeditor5-angular": "^10.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
     "@panzoom/panzoom": "^4.6.0",
     "crypto-js": "^4.2.0",
     "express": "^4.18.2",
