--- a/package.json
+++ b/package.json
@@ -24,9 +24,16 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
     "@auth0/angular-jwt": "^5.2.0",
-    "@ckeditor/ckeditor5-angular": "^10.0.0",
-    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
     "@panzoom/panzoom": "^4.6.0",
+    "@tiptap/core": "^3.10.7",
+    "@tiptap/extension-link": "^3.10.7",
+    "@tiptap/extension-table": "^3.10.7",
+    "@tiptap/extension-table-cell": "^3.10.7",
+    "@tiptap/extension-table-header": "^3.10.7",
+    "@tiptap/extension-table-row": "^3.10.7",
+    "@tiptap/extension-text-align": "^3.10.7",
+    "@tiptap/pm": "^3.10.7",
+    "@tiptap/starter-kit": "^3.10.7",
     "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
