--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@panzoom/panzoom": "^4.6.0",
     "@tiptap/core": "^3.10.7",
+    "@tiptap/extension-color": "^3.11.0",
     "@tiptap/extension-link": "^3.10.7",
     "@tiptap/extension-table": "^3.10.7",
     "@tiptap/extension-table-cell": "^3.10.7",
     "@tiptap/extension-table-header": "^3.10.7",
     "@tiptap/extension-table-row": "^3.10.7",
     "@tiptap/extension-text-align": "^3.10.7",
+    "@tiptap/extension-text-style": "^3.11.0",
     "@tiptap/pm": "^3.10.7",
     "@tiptap/starter-kit": "^3.10.7",
     "crypto-js": "^4.2.0",
+    "dompurify": "^3.3.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
