--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@panzoom/panzoom": "^4.6.0",
     "@tiptap/core": "^3.10.7",
     "@tiptap/extension-color": "^3.11.0",
+    "@tiptap/extension-font-family": "^3.11.0",
     "@tiptap/extension-link": "^3.10.7",
     "@tiptap/extension-table": "^3.10.7",
     "@tiptap/extension-table-cell": "^3.10.7",
