--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "crypto-js": "^4.2.0",
     "dompurify": "^3.3.0",
     "express": "^4.18.2",
+    "prosemirror-utils": "^1.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
